# puncc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.MD  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  deploy-doc.yml  doc.yml  linter.yml  publish.yml  tests-coverage.yml  tests.yml
deel/: __init__.py
deel/puncc/: __init__.py  _keras.py  anomaly_detection.py  calibration.py  classification.py  cloning.py  config.py  conformalization.py  metrics.py  object_detection.py  ops.py  plotting.py  regression.py  regression2.py  typing.py
deel/puncc/api/: CRC.py  RCPS.py  README.md  backend.py  calibration.py  calibration2.py  conformal_predictor.py  conformalization.py  conformalization2.py  corrections.py  cross_conformal.py  experimental.py  nonconformity_scores.py  prediction.py  prediction2.py  prediction_sets.py  splitting.py  splitting2.py  utils.py
deel/puncc/common/: conformalizers.py
dirty_nbs/: quantile.ipynb
doc/: quickstart.ipynb
docs/: .buildinfo  anomaly_detection.html  anomaly_detection.md  api.html  api.md  api_intro.ipynb  backend.html  calibration.html  calibration.md  classification.html  classification.md  conformalization.html  conformalization.md  corrections.html  corrections.md  experimental.html  experimental.md  genindex.html  getting_started.html  getting_started.md  index.html  index.md  metrics.html  metrics.md  nonconformity_scores.html  nonconformity_scores.md  object_detection.html  object_detection.md  objects.inv  plotting.html  plotting.md  prediction.html  prediction.md  prediction_sets.html  prediction_sets.md  puncc_adaptive_methods.ipynb  puncc_architecture.ipynb  puncc_classwise.ipynb  puncc_cod.ipynb  puncc_custom_conformalization.ipynb  (+25 more)
docs/_sources/: anomaly_detection.rst.txt  api.rst.txt  backend.rst.txt  calibration.rst.txt  classification.rst.txt  corrections.rst.txt  getting_started.rst.txt  index.rst.txt  prediction.rst.txt  regression.rst.txt  splitting.rst.txt  theory_overview.rst.txt  tutorials.rst.txt
docs/javascripts/: mathjax.js
docs/source/: anomaly_detection.rst  api.rst  calibration.rst  classification.rst  conf.py  conformalization.rst  experimental.rst  getting_started.rst  index.rst  metrics.rst  nonconformity_scores.rst  object_detection.rst  prediction.rst  refs.bib  regression.rst  splitting.rst  theory_overview.rst  tutorials.rst  utils.rst
puncc/: calibration.py  conformalization.py  prediction.py  predictor.py  splitting.py  utils.py
puncc/common/: confomalizers.py  conformalizers.py
rcps_tests/: generate_data.py  imagenet.py  lambda_predictor.py  wmloss.py
rcps_tests/results/: summary.txt
tests/: __init__.py  conftest.py  test_anomaly_detection_seed.py  test_classification_seed.py  test_group_cp.py  test_hi_level.py  test_lo_level.py  test_metrics.py  test_object_detection.py  test_plotting.py  test_reg_hi_api.py  test_reg_hi_api_seed.py  test_reg_lo_api.py  test_regression_seed.py  test_tf_compliance.py  test_wrapper_branches.py
tests/api/: test_backend.py  test_calibration.py  test_conformalization.py  test_corrections.py  test_experimental.py  test_nonconformity_scores.py  test_prediction_sets.py  test_prediction_wrappers.py  test_splitting.py  test_utils.py
tests/examples/: test_calibration.py  test_classification.py  test_conformalization.py  test_examples_calibration.py  test_examples_classification.py  test_examples_conformalization.py  test_examples_regression.py  test_regression.py
